--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,8 +7,42 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     tools:context="mx.ivajotha.myapps.MainActivity">
 
     <include layout="@layout/mytoolbar" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="@dimen/activity_vertical_margin">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/titleInterSize"
+            android:textColor="@color/colorAccent"
+            android:text="@string/titleInterMain"/>
+
+        <TextView
+            android:id="@+id/actAdd_msgEmtyApps"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/titleInterSize"
+            android:textColor="@color/colorFail"
+            android:gravity="center"
+            android:visibility="invisible"
+            android:text="@string/msgEmptyApps"/>
+
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="visible"
+            android:id="@+id/contenApps">
+
+        </ListView>
+
+    </LinearLayout>
 
 </LinearLayout>
