--- a/app/src/main/res/layout/row_app.xml
+++ b/app/src/main/res/layout/row_app.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:orientation="horizontal"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:minHeight="70dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -13,7 +15,6 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:id="@+id/row_appImg"
-            android:src="@drawable/ic_action_perm_camera_mic"
             android:layout_margin="@dimen/activity_horizontal_margin" />
 
     </LinearLayout>
@@ -39,5 +40,13 @@
         android:textColor="@color/colorAccent"
         android:textSize="15sp"
         android:layout_weight="1" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/row_appStatus"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="15sp"
+            android:layout_weight="1" />
     </LinearLayout>
 </LinearLayout>
