--- a/app/src/main/res/layout/activity_app.xml
+++ b/app/src/main/res/layout/activity_app.xml
@@ -5,4 +5,9 @@
 
     <include layout="@layout/mytoolbar"/>
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/fragmentApp">
+    </FrameLayout>
 </LinearLayout>
