--- a/app/src/main/res/layout/row_app.xml
+++ b/app/src/main/res/layout/row_app.xml
@@ -34,12 +34,20 @@
             android:layout_weight="1" />
 
         <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/row_appNameDev"
-        android:textColor="@color/colorAccent"
-        android:textSize="15sp"
-        android:layout_weight="1" />
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/row_appNameDev"
+            android:textColor="@color/colorAccent"
+            android:textSize="15sp"
+            android:layout_weight="1" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/row_appDetails"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="15sp"
+            android:layout_weight="1" />
 
         <TextView
             android:layout_width="match_parent"
@@ -49,5 +57,8 @@
             android:textSize="15sp"
             android:gravity="right"
             android:layout_weight="1" />
+
+
     </LinearLayout>
+
 </LinearLayout>
