--- a/app/src/main/res/layout/row_app.xml
+++ b/app/src/main/res/layout/row_app.xml
@@ -3,7 +3,8 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:minHeight="70dp">
+    android:minHeight="70dp"
+    android:padding="5dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -29,7 +30,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/row_appName"
-            android:textSize="15sp"
+            android:textSize="@dimen/sizeTextTApp"
             android:textStyle="bold"
             android:layout_weight="1" />
 
@@ -38,7 +39,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/row_appNameDev"
             android:textColor="@color/colorAccent"
-            android:textSize="15sp"
+            android:textSize="@dimen/sizeTextApp"
             android:layout_weight="1" />
 
         <TextView
@@ -46,18 +47,18 @@
             android:layout_height="wrap_content"
             android:id="@+id/row_appDetails"
             android:textColor="@color/colorPrimaryDark"
-            android:textSize="15sp"
+            android:textSize="@dimen/sizeTextApp"
             android:layout_weight="1" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/row_appStatus"
-            android:textColor="@color/colorPrimaryDark"
-            android:textSize="15sp"
+            android:textColor="@color/statusApp"
+            android:textSize="@dimen/sizeTextMApp"
+            android:layout_weight="1"
             android:gravity="right"
-            android:layout_weight="1" />
-
+            android:layout_marginRight="5dp" />
 
     </LinearLayout>
 
