--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,10 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
     tools:context="mx.ivajotha.myapps.MainActivity">
 
@@ -23,6 +19,8 @@
             android:layout_height="wrap_content"
             android:textSize="@dimen/titleInterSize"
             android:textColor="@color/colorAccent"
+            android:textAllCaps="true"
+            android:textStyle="bold"
             android:text="@string/titleInterMain"/>
 
         <TextView
