--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -13,19 +13,20 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="0.9">
+            android:layout_weight="0.8">
 
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/ic_app_ramdom_1"
                 android:id="@+id/fragDet_appImg"
-                android:layout_margin="@dimen/activity_horizontal_margin" />
+                android:layout_margin="@dimen/activity_horizontal_margin"
+                android:layout_gravity="center" />
 
         </LinearLayout>
 
         <LinearLayout
-            android:layout_weight="0.1"
+            android:layout_weight="0.2"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
@@ -34,8 +35,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/fragDet_appName"
-                android:textSize="15sp"
-                android:text="HOL"
+                android:textAllCaps="true"
+                android:textSize="@dimen/sizeTextTApp"
                 android:textStyle="bold"
                 android:layout_weight="1" />
 
@@ -44,7 +45,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/fragDet_appNameDev"
                 android:textColor="@color/colorAccent"
-                android:textSize="15sp"
+                android:textSize="@dimen/sizeTextApp"
                 android:layout_weight="1" />
 
             <TextView
@@ -52,18 +53,32 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/fragDet_appDetails"
                 android:textColor="@color/colorPrimaryDark"
-                android:textSize="15sp"
+                android:textSize="@dimen/sizeTextApp"
                 android:layout_weight="1" />
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/fragDet_appStatus"
-                android:textColor="@color/colorPrimaryDark"
-                android:textSize="15sp"
-                android:gravity="right"
-                android:layout_weight="1" />
         </LinearLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/fragDet_btnUpd_Unins"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:textColor="@color/colorBtns"
+            android:layout_weight="1"
+            />
+        <Button
+            android:id="@+id/fragDet_btnOpenUrl"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_margin="2dp"
+            android:text="@string/txt_btnOpen"
+            android:layout_weight="1"/>
 
     </LinearLayout>
 </LinearLayout>
