--- a/app/src/main/res/layout/row_app.xml
+++ b/app/src/main/res/layout/row_app.xml
@@ -7,22 +7,8 @@
     android:padding="5dp">
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="0.9">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:id="@+id/row_appImg"
-            android:layout_margin="@dimen/activity_horizontal_margin" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_weight="0.1"
         android:orientation="vertical"
+        android:layout_marginLeft="10dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -30,6 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/row_appName"
+            android:textAllCaps="true"
             android:textSize="@dimen/sizeTextTApp"
             android:textStyle="bold"
             android:layout_weight="1" />
@@ -48,6 +35,7 @@
             android:id="@+id/row_appDetails"
             android:textColor="@color/colorPrimaryDark"
             android:textSize="@dimen/sizeTextApp"
+            android:textStyle="italic"
             android:layout_weight="1" />
 
         <TextView
@@ -56,6 +44,7 @@
             android:id="@+id/row_appStatus"
             android:textColor="@color/statusApp"
             android:textSize="@dimen/sizeTextMApp"
+            android:textAllCaps="true"
             android:layout_weight="1"
             android:gravity="right"
             android:layout_marginRight="5dp" />
