--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#FF4081</color>
     <color name="colorFail">#ff0000</color>
     <color name="statusApp">#90c75f</color>
+    <color name="colorBtns">#FFFFFF</color>
 </resources>
