Working Uninstall app

--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -93,8 +93,7 @@
             android:id="@+id/fragDet_btnUpd_open"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            />
+            android:layout_weight="1"/>
 
 
     </LinearLayout>
